# emma

./: .env.example  .gitignore  README.md  pyproject.toml  run_api.py
.claude/: settings.local.json
client/: README.md  index.html  package-lock.json  package.json  vite.config.js
client/scripts/: graph.js  main.js
client/src/: App.jsx
client/src/components/: Chat.css  Chat.jsx  Nav.jsx  TabDocs.jsx  TabGraph.jsx  TabHome.jsx
client/src/styles/: globals.css
client/styles/: chat.css  graph.css  nav.css  style.css
config/: conditions.json  intents.json  models.json  responses.json
models/: benchmarks.json
notebooks/: 00_data_exploration.ipynb  01_vectorstore_build.ipynb  02_classification.ipynb  03_clustering.ipynb  04_rag_pipeline.ipynb  05_crs.ipynb  05_ner.ipynb  06_crs.ipynb  06_evaluation_benchmark.ipynb  07_evaluation_benchmark.ipynb  utils.ipynb
scripts/: setup.ps1  setup.sh
src/: __init__.py  api.py  classify.py  cluster.py  data.py  retrieval.py  vectorstore.py
tests/: test_api.py
