[project]
name = "emma"
version = "0.1.0"
description = "EMMA — Emergency Medicine Mentoring Agent"
requires-python = ">=3.11"

dependencies = [
    # ── Core data science ─────────────────────────────────────────────────────
    "numpy",
    "pandas",
    "pyarrow",          # parquet support (MedMCQA)
    "jsonlines",        # JSONL support (MedQA)
    "tqdm",             # progress bars
    # ── ML / NLP ──────────────────────────────────────────────────────────────
    "scikit-learn",     # classification (A1), clustering (A2)
    "spacy",            # NER via en_core_sci_md
    "gensim",           # topic coherence (C_v), word2vec
    "nltk",             # PMI collocation analysis
    # ── Embeddings & vector store ─────────────────────────────────────────────
    "sentence-transformers",   # embeddings for RAG (e.g. PubMedBERT)
    "faiss-cpu",               # vector similarity search (textbook index)
    # ── LangChain (RAG pipeline + AMG-RAG integration) ────────────────────────
    "langchain",
    "langchain-community",
    "langchain-ollama",        # local LLM via Ollama (replaces langchain-openai)
    "langchain-huggingface",   # HuggingFace embeddings in LangChain
    "langgraph",               # agentic graph reasoning (AMG-RAG)
    "langchain-text-splitters",
    # ── Knowledge graph (AMG-RAG MKG construction) ────────────────────────────
    "networkx",         # in-memory knowledge graph
    "wikipedia",        # Wikipedia evidence retrieval (AMG-RAG source)
    # ── LLM serving ───────────────────────────────────────────────────────────
    "ollama",           # Python client for local Ollama models
    # ── API layer (Dialogflow webhook backend) ────────────────────────────────
    "fastapi",
    "uvicorn",
    # ── Utilities ─────────────────────────────────────────────────────────────
    "python-decouple",  # .env config (API keys, paths)
    "requests",         # HTTP calls (PubMed API, etc.)
    "httpx",            # async HTTP (FastAPI background tasks)
    "python-dotenv",    # alternative .env loader
    # ── Jupyter / notebooks ───────────────────────────────────────────────────
    "jupyter",
    "ipykernel",
    "matplotlib",
    "seaborn",
    "nbconvert>=7.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    # ── Dev / testing ─────────────────────────────────────────────────────────
    "pytest",
    "ruff",             # linting + formatting
]
