[project]
name = "emma"
version = "0.1.0"
description = "EMMA — Emergency Medicine Mentoring Agent"
requires-python = ">=3.11"

dependencies = [
    # ── Core data science ─────────────────────────────────────────────────────
    "numpy",
    "pandas",
    "pyarrow",
    "jsonlines",
    "tqdm",

    # ── ML / NLP ──────────────────────────────────────────────────────────────
    "scikit-learn",
    "spacy",
    "gensim",
    "nltk",

    # ── Embeddings & retrieval ────────────────────────────────────────────────
    "sentence-transformers",
    "faiss-cpu",

    # ── LLM inference (HuggingFace) ───────────────────────────────────────────
    "transformers>=4.51.0",
    "accelerate",
    "bitsandbytes",

    # ── Knowledge graph ───────────────────────────────────────────────────────
    "networkx",

    # ── API layer ─────────────────────────────────────────────────────────────
    "fastapi",
    "uvicorn",

    # ── Utilities ─────────────────────────────────────────────────────────────
    "requests",
    "httpx",
    "python-dotenv",

    # ── Jupyter / notebooks ───────────────────────────────────────────────────
    "jupyter",
    "ipykernel",
    "matplotlib",
    "seaborn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]